--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,8 @@
 FROM gradle:6.2.2-jdk8 AS build
 VOLUME /tmp
 COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/dir/src
+WORKDIR /home/gradle/src
 RUN gradle build --no-daemon
-
 FROM openjdk:8-jdk-alpine
 
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
