--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,14 @@ out/
 
 ### VS Code ###
 .vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
 
 ### MacOS ###
 .DS_Store
