--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#Include end-points
+management.endpoint.health.show-details = always
+management.endpoint.metrics.enabled = true
+management.endpoints.web.exposure.include = *
+management.endpoint.metrics.show-details = always
+management.endpoint.health.show-details=always
