--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.2.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
-      id "org.sonarqube" version "2.7"
+    id 'org.sonarqube' version '3.0'
 }
 
 group = 'ruiyang.personal'
@@ -29,6 +29,8 @@ test {
 
 sonarqube {
     properties {
-        property "sonar.sourceEncoding", "UTF-8"
+        property 'sonar.sourceEncoding', 'UTF-8'
+        property 'sonar.projectName', 'Master Thesis Case Project'
+        property 'sonar.host.url', 'http://13.49.10.89:9000'
     }
 }
